--- a/src/less/index.less
+++ b/src/less/index.less
@@ -107,7 +107,20 @@ a{
   height: calc(100% - 30px);
   padding: 60px;
 }
-
+.reList {
+  cursor: pointer;
+  position: fixed;
+  left: 60px;
+  svg {
+    width: 40px;
+    height: 40px;
+    fill: white;
+    transition: fill .5s;
+    &:hover {
+      fill: rgba(238, 249, 252, 0.27);
+    }
+  }
+}
 
 
 
