--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,11 @@
 <div id="content">
 
 </div>
-<div class=""></div>
+<div class="reList">
+  <svg>
+    <use xlink:href="#icon-pubuliu"></use>
+  </svg>
+</div>
 <script src="//at.alicdn.com/t/font_433915_yh5btb9n44zk6gvi.js"></script>
 <script src="/javascripts/bbbundle.js"></script>
 </body>
