--- a/src/less/index.css
+++ b/src/less/index.css
@@ -12,7 +12,7 @@ li {
 }
 body {
   font: 14px/1.4 'Arial';
-  background: url("https://i.loli.net/2017/10/05/59d62c7f95098.png") center center no-repeat;
+  background: url("http://ox2pbpy73.bkt.clouddn.com/bg.png") center center no-repeat;
   background-size: cover;
 }
 a {
